// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Releases API should handle errors gracefully 1`] = `
Object {
  "error": "Failed to fetch releases",
}
`;

exports[`Releases API should return 405 for non-GET requests 1`] = `
Object {
  "error": "Method not allowed",
}
`;
